Add a link in README

--- a/README
+++ b/README
@@ -4,6 +4,7 @@ https://www.youtube.com/playlist?list=PLbgaMIhjbmEnaH_LTkxLI7FMa2HsnawM_
 
 Usage :
 Download or clone this repository, and browse index.html on your local machine.
+or browse https://larzac.info/maths/categories/milewski
 
 These notes helped me to follow the beginning of the course, but do not bring new information.
 More info on https://bartoszmilewski.com/2014/10/28/category-theory-for-programmers-the-preface/
