--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Notes and screenshots of video courses on category theory by Bartosz Milewski on
 https://www.youtube.com/playlist?list=PLbgaMIhjbmEnaH_LTkxLI7FMa2HsnawM_
 
 Usage :
-Download or clone this repository, and browse index.html on your local machine.
+Download or clone this repository, and browse index.html on your local machine,
 or browse https://larzac.info/maths/categories/milewski
 
 These notes helped me to follow the beginning of the course, but do not bring new information.
